Fixed bar chart spacing for main page, and when printing

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,6 +2,12 @@
     width: 100%;
     height: 40vh;
     margin-bottom: 20px;
+    border: 2px solid rgb(230, 230, 230);
+    border-radius: 20px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .machine-card-container {
