--- a/src/Components/OverviewBarChart/OverviewBarChart.css
+++ b/src/Components/OverviewBarChart/OverviewBarChart.css
@@ -1,19 +1,33 @@
-.bar-chart-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2px;
-    margin-bottom: 50px;
-    border: 2px solid rgb(230, 230, 230);
-    border-radius: 20px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
-}
 
 .bar-chart{
-    max-width: 100%;
-    max-height: 40vh;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .bar-chart-container:hover{
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+}
+
+/* Print-specific styles */
+@media print {
+    .chart-container {
+        height: 18vh; /* Adjust height to 25% of the view height for print */
+
+    }
+
+    .bar-chart {
+        height: 100%; /* Ensure the chart fills the reduced container */
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    /* Optional: Remove box-shadow or borders if you want cleaner print */
+    .chart-container {
+        box-shadow: none;
+        border: 1px solid rgb(230, 230, 230); /* Thinner border for print */
+    }
 }
